# langchain-poc

./: .gitignore  CHANGELOG.md  README.md  docker-compose.yml
agent-engine/: main.py  pyproject.toml
agent-engine/app/: main.py
agent-engine/app/api/middlewares/: global_exception_handler.py  request_timing.py
agent-engine/app/api/routers/: chats.py
agent-engine/app/apm/: apm_config.py  client.py
agent-engine/app/config/: server_config.py
agent-engine/app/internal/agents/: builder.py  middleware.py
agent-engine/app/internal/services/: service_agents.py
agent-engine/app/internal/store/: store_client.py
agent-store/: README.md  pyproject.toml
agent-store/app/: logging_config.py  main.py
agent-store/app/api/: deps.py
agent-store/app/api/routers/: agents.py  chats.py  messages.py  tools.py  vectors.py
agent-store/app/apm/: client.py
agent-store/app/contracts/: contract_agents.py  contract_chats.py  contract_messages.py  contract_tools.py  contract_vectors.py  spec_tools.py
agent-store/app/internal/mcp/: tool_compiler.py  tool_engine.py  tool_subscriber.py
agent-store/app/internal/services/: errors.py  mappers.py  ports.py  service_agents.py  service_chats.py  service_messages.py  service_tools.py  service_vectors.py
agent-store/app/internal/store/: db.py  db_vector.py  repository_agents.py  repository_chats.py  repository_messages.py  repository_tools.py  repository_vectors.py  schema.py
agent-store/app/internal/tools/: __init__.py  (+2 more)
agent-store/tests/: conftest.py  test_mcp_integration.py  test_tool_engine.py  test_tools_integration.py
(+38 files in other folders)
