[project]
name = "agent-store"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["fastapi", "fastmcp", "httpx", "sqlmodel", "elastic-apm", "chromadb"]

[tool.server]
host = "127.0.0.1"
port = 8002
reload = true

[tool.apm]
enable = true
service-name = "agent-store"
server-url = "http://localhost:8200"

[project.scripts]
agent-store = "app.main:run"
